tup/parse/testdata/error/output/nested_errors.tup
# binary expression missing operand in function body
error: expecting "expression", got "}"
--> /home/user/tuppence/tup/parse/testdata/error/input/nested_errors.tup:1:36

# binary expression missing operand in block expression
error: expecting "expression", got "}"
--> /home/user/tuppence/tup/parse/testdata/error/input/nested_errors.tup:5:1

# binary expression missing operand in function call argument
error: expecting "expression", got ")"
--> /home/user/tuppence/tup/parse/testdata/error/input/nested_errors.tup:1:13

# nested call missing closing paren
error: expecting ")", got ""
--> /home/user/tuppence/tup/parse/testdata/error/input/nested_errors.tup:1:22

# binary expression missing operand in array initializer closure
error: expecting "expression", got "}"
--> /home/user/tuppence/tup/parse/testdata/error/input/nested_errors.tup:1:22

# if expression missing then branch inside function body
error: expecting "block", got "}"
--> /home/user/tuppence/tup/parse/testdata/error/input/nested_errors.tup:1:36
